Fix broken layout for search icon

--- a/wp-content/themes/ci2018/assets/styles/base/_DEVONLY.scss
+++ b/wp-content/themes/ci2018/assets/styles/base/_DEVONLY.scss
@@ -1,5 +1,5 @@
 @import 'https://fonts.googleapis.com/css?family=Inconsolata';
 body {
-  background: url('../../assets/images/blue-texture.png');
+  background: url('../images/blue-texture.png');
   font-weight: 600;
 }
