--- a/wp-content/themes/ci2018/assets/styles/utility/_icons.sass
+++ b/wp-content/themes/ci2018/assets/styles/utility/_icons.sass
@@ -1,9 +1,11 @@
-// 
+// // DO NOT EDIT DIRECTLY!
+  //Generated by gulpfile.js/tasks/iconFont.js
+  //from gulpfile.js/tasks/iconFont/template.sass
 
 @font-face
-  font-family: 
-  src: url("/.eot")
-  src: url("/.eot?#iefix") format('embedded-opentype'), url("/.woff") format('woff'), url("/.ttf") format('truetype'), url("/.svg#") format('svg')
+  font-family: icons
+  src: url("../fonts/icons.eot")
+  src: url("../fonts/icons.eot?#iefix") format('embedded-opentype'), url("../fonts/icons.woff") format('woff'), url("../fonts/icons.ttf") format('truetype'), url("../fonts/icons.svg#icons") format('svg')
   font-weight: normal
   font-style: normal
 
@@ -12,7 +14,7 @@
     -moz-osx-font-smoothing: grayscale
     -webkit-font-smoothing: antialiased
     content: $content
-    font-family: ''
+    font-family: 'icons'
     font-style: normal
     font-variant: normal
     font-weight: normal
@@ -23,5 +25,15 @@
 
 .icon
   +icon
+
+// Save variable
+$icon-ci-search: "\EA04"
+// Save mixin
+=icon--ci-search
+  +icon($icon-ci-search)
+    @content
+// Expose as class
+.icon.-ci-search:before
+  content: $icon-ci-search
 
 
